# Yolo-V12-NCNN-Public

./: LICENSE  README.md  local.properties
app/src/main/assets/: yolov12n.ncnn.param  yolov12n640.ncnn.param  yolov12s.ncnn.param
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  ndkcamera.cpp  yolo.cpp  yolo.h
app/src/main/java/com/mpj/yolov12/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
